Responsive nav added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,24 @@
 
     <!-- Start of butto html.-->
     <header>
-        <div class="buttondiv"> <!--Buttons with class. Read all lines to find classes-->
+        <nav>
+            <div class="name2">Sports Arena</div>
+
+            <input type="checkbox" id="cl">
+            <label for="cl" class="hd"> <i class="fas fa-bars"></i></label>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="schedule.html">Schedules</a></li>
+                <li><a href="direction.html">Direction</a></li>
+                <li><a href="codeconduct.html">Code of Conduct</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- 
+    <header>
+        <div class="buttondiv"> 
             <nav class="navigation">
                 <ul>
                     <button class="button--secondary">
@@ -44,7 +61,7 @@
                 </ul>
             </nav>
         </div>
-    </header>
+    </header> -->
     <br>
     <p class="desPara1">Sports Arena is the place where you practice for your favorite sports.
         Book your game time on our website. Look all the events happaning in our arena.
@@ -60,29 +77,90 @@
     <p class="para1">Play your favorite game here</p>
 
     <!--Buttons for different types of games.-->
-    <div id="container">
-        <div id="main">
-            <div class="row">
-                <div class="column">
-                    <!--Image with floating text -->
-                    <img class="imagebutton" src="Soccerbackground.jpeg" alt="SoccerBack">
-                    <h><a href="soccer.html"><button class="allbuttons">Soccer</button></a></h>
-                </div>
-                <div class="column">
-                    <img class="imagebutton" src="football.jpeg" alt="">
-                    <h><button class="allbuttons">Football</button></h>
-                </div>
-                <div class="column">
-                    <img class="imagebutton" src="badminton.jpeg" alt="">
-                    <h><button class="allbuttons">Badminton</button></h>
-                </div>
-                <div class="column">
-                    <img class="imagebutton" src="hockey.jpeg" alt="">
-                    <h><button class="allbuttons">Hockey</button></h>
-                </div>
-            </div>
+
+
+    <div class="row">
+        <div class="column3">
+            <ul>
+                <li>
+                    <img class="image" src="soccer_image.jpg" alt="">
+                    <a class="btn" href="soccer.html">Soccer</a>
+                </li>
+            </ul>
+        </div>
+        <div class="column3">
+            <ul>
+                <li>
+                    <img class="image" src="football_image.jpg" alt="">
+                    <a class="btn" href="#">Football</a>
+                </li>
+            </ul>
+        </div>
+        <div class="column3">
+            <ul>
+                <li>
+                    <img class="image" src="badminton.jpeg" alt="">
+                    <a class="btn" href="#">Badminton</a>
+                </li>
+            </ul>
+        </div>
+        <div class="column3">
+            <ul>
+                <li>
+                    <img class="image" src="hockey.jpeg" alt="">
+                    <a class="btn" href="#">Hockey</a>
+                </li>
+            </ul>
         </div>
     </div>
+
+
+    <!--     
+    <div class="row">
+        <div class="column3">
+            <img class="imagebutton" src="Soccerbackground.jpeg" alt="SoccerBack">
+            <h><a href="soccer.html"><button class="allbuttons">Soccer</button></a></h>
+        </div>
+        <div class="column3">
+            <img class="imagebutton" src="football.jpeg" alt="">
+            <h><button class="allbuttons">Football</button></h>
+        </div>
+        <div class="column3">
+            <img class="imagebutton" src="badminton.jpeg" alt="">
+            <h><button class="allbuttons">Badminton</button></h>
+        </div>
+        <div class="column3">
+            <img class="imagebutton" src="hockey.jpeg" alt="">
+            <h><button class="allbuttons">Hockey</button></h>
+        </div>
+    </div> -->
+
+
+    <!--
+    <div id="main">
+        <div class="row">
+            <div class="column"> -->
+    <!--Image with floating text -->
+    <!--
+                <img class="imagebutton" src="Soccerbackground.jpeg" alt="SoccerBack">
+                <h><a href="soccer.html"><button class="allbuttons">Soccer</button></a></h>
+            </div>
+            <div class="column">
+                <img class="imagebutton" src="football.jpeg" alt="">
+                <h><button class="allbuttons">Football</button></h>
+            </div>
+            <div class="column">
+                <img class="imagebutton" src="badminton.jpeg" alt="">
+                <h><button class="allbuttons">Badminton</button></h>
+            </div>
+            <div class="column">
+                <img class="imagebutton" src="hockey.jpeg" alt="">
+                <h><button class="allbuttons">Hockey</button></h>
+            </div>
+        </div>
+    </div> 
+-->
+
 
     <!-- Footer starts here.-->
     <footer>
