--- a/codeconduct.html
+++ b/codeconduct.html
@@ -27,8 +27,26 @@
     <p class="socialdes">Follow us on our social media</p>
 
     <!-- Start of butto html.-->
+
     <header>
-        <div class="buttondiv"> <!--Buttons with class. Read all lines to find classes-->
+        <nav>
+            <div class="name2">Sports Arena</div>
+
+            <input type="checkbox" id="cl">
+            <label for="cl" class="hd"> <i class="fas fa-bars"></i></label>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="schedule.html">Schedules</a></li>
+                <li><a href="direction.html">Direction</a></li>
+                <li><a href="codeconduct.html">Code of Conduct</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!--     
+    <header>
+        <div class="buttondiv"> 
             <nav class="navigation">
                 <ul>
                     <button class="button--secondary">
@@ -49,7 +67,7 @@
                 </ul>
             </nav>
         </div>
-    </header>
+    </header> -->
 
     <!-- Video of code conduct page starts here.-->
 
