--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,26 @@
     <p class="socialdes">Follow us on our social media</p>
 
     <!-- Start of butto html.-->
+
     <header>
-        <div class="buttondiv"> <!--Buttons with class. Read all lines to find classes-->
+        <nav>
+            <div class="name2">Sports Arena</div>
+
+            <input type="checkbox" id="cl">
+            <label for="cl" class="hd"> <i class="fas fa-bars"></i></label>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="schedule.html">Schedules</a></li>
+                <li><a href="direction.html">Direction</a></li>
+                <li><a href="codeconduct.html">Code of Conduct</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!--     
+    <header>
+        <div class="buttondiv"> 
             <nav class="navigation">
                 <ul>
                     <button class="button--secondary">
@@ -48,7 +66,8 @@
                 </ul>
             </nav>
         </div>
-    </header>
+    </header> -->
+
     <center class="contactInfo">
         <p class="contactInfoName">Sports<br>Arena</p>
         <p class="InfoAddress">1234 Somewhere av, SomeCity 45678</p>
@@ -150,6 +169,9 @@
 
             </div>
             <div class="column2">
+                <div class="name">
+                    <input type="text" name="Zip code" placeholder="Enter Zip code">
+                </div>
                 <div class="name">
                     <input type="text" name="email" placeholder="Enter email">
                 </div>
