--- a/direction.html
+++ b/direction.html
@@ -25,8 +25,25 @@
     <p class="socialdes">Follow us on our social media</p>
 
     <!-- Start of butto html.-->
+
     <header>
-        <div class="buttondiv"> <!--Buttons with class. Read all lines to find classes-->
+        <nav>
+            <div class="name2">Sports Arena</div>
+
+            <input type="checkbox" id="cl">
+            <label for="cl" class="hd"> <i class="fas fa-bars"></i></label>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="schedule.html">Schedules</a></li>
+                <li><a href="direction.html">Direction</a></li>
+                <li><a href="codeconduct.html">Code of Conduct</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- 
+    <header>
+        <div class="buttondiv"> 
             <nav class="navigation">
                 <ul>
                     <button class="button--secondary">
@@ -47,7 +64,9 @@
                 </ul>
             </nav>
         </div>
-    </header>
+    </header> -->
+
+
     <p>You go this way than take left and than take right. You will be here</p>
 
     <!-- Footer starts here.-->
